test/kubernetes/e2e/features/agentgateway/transformation/testdata/gateway-attached-transform.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-gateway-attached-transform.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-gateway-attached-transform
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  transformation:
    request:
      set:
        - name: request-gateway
          value: "'hello'"
          type: CEL
    response:
      set:
        - name: response-gateway
          value: "'goodbye'"
          type: CEL
