test/kubernetes/e2e/features/agentgateway/transformation/testdata/transform-for-body-json.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body-json
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-body-json.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-body-json
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body-json
  transformation:
    request:
      set:
        - name: "x-transformed-incoming"
          value: "has(json(request.body).mykey) && has(json(request.body).mykey.myinnerkey) ? 'level_' + string(json(request.body).mykey.myinnerkey) : 'level_unknown'"
          type: CEL
      body:
        parseAs: "AsJson"
        value: "request.body"
        type: CEL
    response:
      set:
        - name: "x-how-great"
          value: "has(request.headers['x-incoming-stuff']) ? 'level_' + request.headers['x-incoming-stuff'] : 'level_unknown'"
          type: CEL
        - name: "from-incoming"
          value: "has(request.headers['x-transformed-incoming']) ? 'key_' + request.headers['x-transformed-incoming'] : 'key_unknown'"
          type: CEL
      body:
        parseAs: "AsJson"
        value: "request.headers"
        type: CEL
