test/kubernetes/e2e/features/agentgateway/transformation/testdata/transform-for-body.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-body.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-body
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body
  transformation:
    request:
      set:
        - name: "x-transformed-incoming"
          value: "'mykey' in json(request.body) && 'myinnerkey' in json(request.body).mykey ? 'level_' + string(json(request.body).mykey.myinnerkey) : 'level_unknown'"
          type: CEL
      body:
        value: "request.body"
        type: CEL
    response:
      set:
        - name: "x-how-great"
          value:  "'x-incoming-stuff' in request.headers ? 'level_' + request.headers['x-incoming-stuff'] : 'level_unknown'"
          type: CEL
        - name: "from-incoming"
          value: "'mykey' in json(request.body) && 'myinnerkey' in json(request.body).mykey ? 'key_level_' + string(json(request.body).mykey.myinnerkey) : 'key_unknown'"
          type: CEL
      body:
        value: "request.headers"
        type: CEL
