test/kubernetes/e2e/features/agentgateway/transformation/testdata/transform-for-headers.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-headers
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-headers.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-headers
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-headers
  transformation:
    request:
      set:
        - name: x-foo-bar
          value: "'foolen_' + request.headers['content-length']"
          type: CEL
    response:
      set:
        - name: x-foo-response
          value: "'x-add-bar' in request.headers ? 'supersuper' + request.headers['x-add-bar'] : 'notsuper'"
          type: CEL
